Migrate APITest to JUnit5
This is a straightforward migration, hiding the test class and splitting
up a testcase into two.

Change-Id: I0b7e8d52d82a08afa16f91a87b8ab97debbde690
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>